# ransomware-response-system

./: .gitignore  LICENSE  PHASES.txt  PROJECT_REPORT.md  README.md  VISION_ALIGNMENT_SUMMARY.md  WARP.md  bandit.yaml  build_log.txt  create_tables.sql  docker-compose.yml  monitor_microservices.py  pipeline_test.ps1  requirements-test.txt  ruff.toml  run.py  seed_data.sql  system_health_report.json  test-backend-full.ps1  test-backend.ps1  test_results_20251201_204339.txt  test_system.ps1  test_system_health.py  test_workflow.ps1
backend/: Dockerfile  Dockerfile.backend  add_debug_print.py  create_admin.py  debug_query.py  fix_gateway.py  fix_incidents_query.py  fix_incidents_query_v2.py  init_db.py  requirements.txt  reset_admin_password.py  reset_database.py  seed_incidents.py
backend/shared_lib/: __init__.py  pyproject.toml  setup.py
backend/shared_lib/events/: rabbitmq.py
backend/shared_lib/integrations/: abuseipdb_client.py  pfsense_client.py  wazuh_client.py  yara_analyzer.py
backend/shared_lib/integrations/yara_rules/: sample_rules.yar
backend/shared_lib/src/shared_lib/schemas/: __init__.py  incident.py
config/: integrations.yaml
database/: add_quarantine_table.sql  init.sql
deploy/: Caddyfile  docker-compose.prod.yml
docs/: cloud-readiness.md  demo-playbook.md  deployment.md  evaluator-demo.md  event-flow.md  security-hardening.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  rebuild-frontend.bat  tailwind.config.js  vite.config.ts
scripts/: bootstrap_env.py  run_tests.py  security_checks.py  (+2 more)
(+176 files in other folders)
