[build-system]
requires = ["setuptools>=65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-shared_lib"
version = "0.1.0"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}